# AstralTrail3D

./: .bumpver.toml  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  bumpver.toml  bumpver_test_match.py  config.json  gitignore  pyproject.toml  readme.md  release.py
app/: __main__.py  astral_app.py  astraltrail.py  camera.py  config.json  constants.py  cube.py  gamestate.py  matrices.py  objects.py  renderer.py  rendering.py  vector.py
app/objects/: camera.py  object.py  objects.py  platonics.py
app/states/: gamestate.py  menus.py  playstate.py
astralengine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
astraltrail/: .bumpver.toml  CHANGELOG.md  LICENSE  README.md  __main__.py  gamestate.py  gitignore  launch_astral.py  pyproject.toml  release.py
astraltrail/assets/: meshes.py
astraltrail/assets/textures/cobble/: Wall_Stone_025_ambientOcclusion.htm  Wall_Stone_025_basecolor.htm  Wall_Stone_025_height.htm  Wall_Stone_025_normal.htm  Wall_Stone_025_roughness.htm
astraltrail/demo/: marching_cubes_triangle_table.py  sandbox.py
astraltrail/docs/articles/: A Hollow City - A Reflection.docx  Simulated Truth - a seminal essay.docx  Substrate First - technical essay.docx
astraltrail/rendering/: rendering.py  shader_sources.py
astraltrail/src/engine/: bootstrap.py
astraltrail/src/engine/ecs/: README.md  component.py  entity.py  system.py
astraltrail/tests/engine/ecs/: test_component.py  test_entity.py  test_system.py
tests/: test_camera.py  test_cube.py  test_renderer.py
